2003-05-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=106148.
	* src/expr.c (cellrange_relocate) : remove previous hack.  We're not
	  changing the expression so don't pretend to.  The right solution is.
	* src/dependent.c (dependents_relocate) : here.
	  Even if the expression does not change queue it for recalc.  We know
	  it depends on the region, so it needs to recalc.

	* src/sheet.c (sheet_move_range) : queue dependencies of target region
	  for recalc their expressions may not change but the content will.

2003-05-16  Morten Welinder  <terra@gnome.org>

	* src/workbook-control-gui.c (workbook_setup_auto_calc,
	workbook_create_standard_toolbar): Use gnm_measure_string instead
	of incorrect and deprecated GdkFont stuff.

	* src/workbook-format-toolbar.c (workbook_create_format_toolbar):
	Ditto.

	* src/gui-util.c (gnm_measure_string): New function.

2003-05-15  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/stf-parse.c (stf_parse_csv_cell): remove debug spew

2003-05-14  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/GNOME_Gnumeric.xml: Fix spelling
	* src/workbook-control-gui.c: ditto

2003-05-14  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (cb_notebook_switch_page) : set the edit
	  line's scg if we are not in the middle of a rangesel.

	* src/xml-io.c (xml_read_names) : revert my previous error.
	  We can't use parse_pos_init_sheet here because it will fail in the
	  context of workbook level names.

	* src/position.c (parse_pos_init_sheet) : check for that.

2003-05-14  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/gui-file.c (gui_file_open): change in charmap_selector_new
	  arguments

2003-05-14  Morten Welinder  <terra@gnome.org>

	* src/gutils.c (ldexpgnum): Use gnm_pinf and gnm_ninf.
	* src/regression.c (general_linear_regression): Ditto.

	* src/mathfunc.c (mathfunc_init): Generate gnm_pinf and gnm_ninf
	also.  Try much harder at making a NaN.
