@@ -1,3 +1,7 @@
+2003-05-18  Morten Welinder  <terra@gnome.org>
+
+	* src/*.c: Eliminate obvious deprecated stuff.
+
 2003-05-16  Jody Goldberg <jody@gnome.org>
 
 	http://bugzilla.gnome.org/show_bug.cgi?id=106148.
