@@ -1,3 +1,7 @@
+2003-05-18  Morten Welinder  <terra@gnome.org>
+
+	* *.c: Eliminate obvious deprecated stuff.
+
 2003-05-15  Andreas J. Guelzow <aguelzow@taliesin.ca>
 
 	* dialog-stf-csv-page.c: loose text indicator widgets (they are 
